{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "0093b3c4-43b3-4bd7-b08f-7e0df402697f",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "889cced4-a67f-4ef2-a483-83e99455db96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,SlowTap"
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "71a83ef5-ce77-45c3-ae0b-e0de0f2f0094",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "a57cd39d-a93a-4128-aeff-00911fa248fd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cb0a8484-cdf5-4f20-9770-e5ef5d5525a5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44239ed3-96b6-4cf7-acc3-726e88c0abc7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06a11426-b1cd-416b-b0aa-cd03adbd4a4b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}